--- a/Projeto_Integrador/myhospital/src/main/resources/application.properties
+++ b/Projeto_Integrador/myhospital/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost/db_myhospital?createDatabaseIfNotEx
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
+#server.port=8082
